--- a/_posts/2017-09-16-test-post.md
+++ b/_posts/2017-09-16-test-post.md
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "Markdown Test Page"
-tags: downloads
+title: "Test Page"
+tags: documents downloads
 ---
 
 ## Source: [Markdown Test Page](https://github.com/fullpipe/markdown-test-page)
